--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -24,7 +24,8 @@ $themes: (
     single-offer-meta-label: #ffffff,
     single-offer-offer-bg: linear-gradient(180deg, #d6c0ff 0%, #b4ace2 100%),
     single-offer-offer-bg-hover: linear-gradient(180deg, #d6c0ff 80%, #b4ace2 100%),
-    icon-cross: url('/icons/cross-icon-secondary.svg')
+    icon-cross: url('/icons/cross-icon-secondary.svg'),
+    wallet-button-box-shadow: 0px 0px 4px #e00a7f
   ),
   dark: (
     color-background: #210d48,
@@ -52,6 +53,7 @@ $themes: (
     single-offer-meta-label: #8c70bf,
     single-offer-offer-bg: linear-gradient(180deg, #402a6b 0%, #4e2798 100%),
     single-offer-offer-bg-hover: linear-gradient(180deg, #402a6b 0%, #4e2798 30%),
-    icon-cross: url('/icons/cross-icon-primary.svg')
+    icon-cross: url('/icons/cross-icon-primary.svg'),
+    wallet-button-box-shadow: 0px 0px 4px #e00a7f
   )
 );
