--- a/styles/_layoutTopMobile.scss
+++ b/styles/_layoutTopMobile.scss
@@ -1,13 +1,16 @@
 @media (max-width: $bp-phone) {
     .layout-top-mobile {
-        position: fixed;
-        width: 100vw;
-        top: 0;
         @include theme-aware("background-color", "bg-table-hover");
+        position: fixed;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         backdrop-filter: blur(7px);
-        border-radius: 0px 0px 8px 8px;
+        border-radius: 0px 0px 8px 8px;   
         transition: top 0.25s ease;
+
+        &.shown {
+            width: 100vw;
+            top: 0;
+        }
 
         &.hidden {
             top: -200px;
@@ -50,8 +53,8 @@
         box-sizing: border-box;
         border: 1px solid;
         border-radius: 8px;
-        font-weight: 400;
-        font-size: 15px;
+        font-weight: $wg-lt;
+        font-size: $tp-1md;
         text-align: center;
         padding: 16px;
         justify-content: center;
