--- a/styles/_menuShowButton.scss
+++ b/styles/_menuShowButton.scss
@@ -24,15 +24,15 @@
         transition: all 0.5s ease;
     }
 
-    &.cross .strip:first-child {
+    &.clicked .strip:first-child {
         transform: translateY(13px) rotate(45deg);
     }
 
-    &.cross .strip:nth-child(2) {
+    &.clicked .strip:nth-child(2) {
         opacity: 0;
     }
 
-    &.cross .strip:last-child {
+    &.clicked .strip:last-child {
         transform: translateY(-13px) rotate(-45deg);
     }
 }
