--- a/styles/_NFTCollateral.scss
+++ b/styles/_NFTCollateral.scss
@@ -53,6 +53,25 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
+  max-height: 500px;
+  overflow-y: auto;
+  padding-right: 20px;
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    @include theme-aware('background', 'color-accentDark');
+    border-radius: 20px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    @include theme-aware('background-color', 'color-primary');
+    border-radius: 20px;
+    border: 3px solid;
+    @include theme-aware('border-color', 'color-primary');
+  }
 
   @media (max-width: $bp-tablet) {
     display: flex;
