--- a/styles/myOffers/_myOffersNftList.scss
+++ b/styles/myOffers/_myOffersNftList.scss
@@ -140,6 +140,11 @@
       border: none;
       min-width: 240px;
       text-align: center;
+      margin-left: 20px;
+
+      &:first-child {
+        margin-left: 0;
+      }
 
       @media (max-width: $bp-tablet) {
         margin-bottom: 10px;
@@ -151,7 +156,6 @@
       cursor: auto;
       @include theme-aware('background-color', 'color-button-disabled');
       @include theme-aware('color', 'color-label');
-      margin-right: 20px;
     }
   }
 
