--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -113,7 +113,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      padding: 16px;
+      padding: 12px 16px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -131,7 +131,7 @@
 
       & span:nth-child(2) {
         font-weight: 700;
-        padding-top: 4px;
+        padding-top: 2px;
       }
 
       .data-item {
