added font variables

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,16 +6,18 @@ $bp-tablet: 1024px;
 $bp-phone: 768px;
 
 // Typography
+$tp-xtn: 9px;
 $tp-tn: 10px;
+$tp-1tn: 11px;
 $tp-sm: 12px;
 $tp-md: 14px;
 $tp-1md: 15px;
+$tp-2md: 16px;
 $tp-lg: 18px;
 $tp-xl: 36px;
 $tp-1xl: 48px;
 $tp-2xl: 72px;
 $tp-3xl: 98px;
-
 $tp-xl-mb: 22px;
 $tp-2xl-mb: 48px;
 $tp-3xl-mb: 58px;
