--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -216,8 +216,7 @@
             overflow: hidden;
             text-overflow: ellipsis;
             word-wrap: break-word;
-            display: inline-block;
-            height: 24px;
+            white-space: nowrap;
           }
 
           .label {
@@ -251,7 +250,6 @@
 
           .item-name {
             font-size: $tp-2md;
-            height: 16px;
           }
 
           .label {
@@ -282,7 +280,6 @@
 
           .item-name {
             font-size: $tp-md;
-            height: 14px;
           }
 
           .label {
@@ -313,7 +310,6 @@
 
           .item-name {
             font-size: $tp-sm;
-            height: 12px;
           }
 
           .label {
