--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -25,7 +25,10 @@ $themes: (
     single-offer-offer-bg: linear-gradient(180deg, #d6c0ff 0%, #b4ace2 100%),
     single-offer-offer-bg-hover: linear-gradient(180deg, #d6c0ff 80%, #b4ace2 100%),
     icon-cross: url('/icons/cross-icon-secondary.svg'),
-    wallet-button-box-shadow: 0px 0px 4px #e00a7f
+    wallet-button-box-shadow: 0px 0px 4px #e00a7f,
+    info-red: #b82626,
+    info-green: #7fbe20,
+    icon-eye: url('/icons/eye-icon-white.svg')
   ),
   dark: (
     color-background: #210d48,
@@ -54,6 +57,9 @@ $themes: (
     single-offer-offer-bg: linear-gradient(180deg, #402a6b 0%, #4e2798 100%),
     single-offer-offer-bg-hover: linear-gradient(180deg, #402a6b 0%, #4e2798 30%),
     icon-cross: url('/icons/cross-icon-primary.svg'),
-    wallet-button-box-shadow: 0px 0px 4px #e00a7f
+    wallet-button-box-shadow: 0px 0px 4px #e00a7f,
+    info-red: #b82626,
+    info-green: #7fbe20,
+    icon-eye: url('/icons/eye-icon-white.svg')
   )
 );
