--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,6 +20,7 @@
 @import './footer/footer';
 @import './showOnHover';
 @import './solscanExplorer';
+@import './popups';
 
 @import './singleOffer/header';
 @import './singleOffer/offer';
