--- a/styles/myOffers/_myOffersNftList.scss
+++ b/styles/myOffers/_myOffersNftList.scss
@@ -186,6 +186,34 @@
   font-weight: 700;
   transition: max-height 0.5s;
 
+  .offers-list-headbar--active {
+    text-align: center;
+    h4 {
+      margin: 10px 0 5px 0;
+    }
+
+    .active-loan-info {
+      display: inline-block;
+      border-radius: $brd-rds-lg;
+
+      &.loan--late {
+        padding: 10px;
+        @include theme-aware('background-color', 'info-red');
+      }
+
+      span {
+        display: inline-block;
+        margin-left: 4px;
+        font-weight: $wg-lt;
+        border-radius: $brd-rds-lg;
+
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+    }
+  }
+
   @media (max-width: $bp-tablet) {
     width: 90vw;
     margin: 0 2.5vh;
