--- a/styles/myOffers/_myOffersTop.scss
+++ b/styles/myOffers/_myOffersTop.scss
@@ -90,3 +90,27 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.container-tabbed {
+  .container-tabbed-tabs {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 40px;
+
+    button {
+      height: auto;
+      padding: 6px 20px;
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      &.active {
+        @include theme-aware('background-color', 'color-primary');
+        @include theme-aware('color', 'color-label');
+      }
+    }
+  }
+}
