confirmation lightbox on lending tokens

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -28,7 +28,8 @@ $themes: (
     wallet-button-box-shadow: 0px 0px 4px #e00a7f,
     info-red: #b82626,
     info-green: #7fbe20,
-    icon-eye: url('/icons/eye-icon-white.svg')
+    icon-eye: url('/icons/eye-icon-white.svg'),
+    nft-pill-bg: #371c6b
   ),
   dark: (
     color-background: #210d48,
@@ -60,6 +61,7 @@ $themes: (
     wallet-button-box-shadow: 0px 0px 4px #e00a7f,
     info-red: #b82626,
     info-green: #7fbe20,
-    icon-eye: url('/icons/eye-icon-white.svg')
+    icon-eye: url('/icons/eye-icon-white.svg'),
+    nft-pill-bg: #371c6b
   )
 );
