--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -29,7 +29,10 @@ $themes: (
     info-red: #b82626,
     info-green: #7fbe20,
     icon-eye: url('/icons/eye-icon-white.svg'),
-    nft-pill-bg: #371c6b
+    nft-pill-bg: #371c6b,
+    input-number-bg: #FFFFFF,
+    input-number-color: #210D48,
+    input-number-button-bg: #E2D9F6
   ),
   dark: (
     color-background: #210d48,
@@ -62,6 +65,9 @@ $themes: (
     info-red: #b82626,
     info-green: #7fbe20,
     icon-eye: url('/icons/eye-icon-white.svg'),
-    nft-pill-bg: #371c6b
+    nft-pill-bg: #371c6b,
+    input-number-bg: #210D48,
+    input-number-color: #FFFFFF,
+    input-number-button-bg: #331C62
   )
 );
