--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,8 @@
 @import './variables';
 @import './themes';
 
+@import './_inputNumberArrows';
+
 @import './animations';
 @import './icons';
 @import './buttons';
