--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -32,7 +32,8 @@ $themes: (
     nft-pill-bg: #371c6b,
     input-number-bg: #FFFFFF,
     input-number-color: #210D48,
-    input-number-button-bg: #E2D9F6
+    input-number-button-bg: #E2D9F6,
+    checkbox-checked-bg: #DF0B7F
   ),
   dark: (
     color-background: #210d48,
@@ -68,6 +69,7 @@ $themes: (
     nft-pill-bg: #371c6b,
     input-number-bg: #210D48,
     input-number-color: #FFFFFF,
-    input-number-button-bg: #331C62
+    input-number-button-bg: #331C62,
+    checkbox-checked-bg: #DF0B7F
   )
 );
