--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,8 @@
 @import './themes';
 
 @import './_inputNumberArrows';
+@import './switchButton';
+@import './currencyChanger';
 
 @import './animations';
 @import './icons';
