fixed missing border radius

--- a/styles/offersPage/_offersGrid.scss
+++ b/styles/offersPage/_offersGrid.scss
@@ -116,6 +116,7 @@
 
     .onHover-data {
       opacity: 1;
+      border-radius: $brd-rds-sm;
       position: absolute;
       top: 0;
       left: 0;
