restyled and added button showing on hover

--- a/styles/offersPage/_offersTable.scss
+++ b/styles/offersPage/_offersTable.scss
@@ -23,7 +23,7 @@
   font-weight: $wg-bd;
   border-radius: $brd-rds-sm $brd-rds-sm 0 0;
   display: grid;
-  grid-template-columns: 2fr 1fr 2fr 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1.5fr 1fr 1fr 1fr 1fr;
 
   .row-cell {
     text-align: left;
@@ -35,7 +35,7 @@
 
   a {
     display: grid;
-    grid-template-columns: 2fr 1fr 2fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 1.5fr 1fr 1fr 1fr 1fr;
     align-content: center;
     width: 100%;
     @include theme-aware('background-color', 'bg-table');
@@ -45,8 +45,13 @@
 
     &:hover {
       @include theme-aware('background-color', 'bg-table-hover');
+      & button {
+        opacity: 1;
+      }
     }
     & button {
+      transition: 0.3s ease-in-out;
+      opacity: 0;
       @include theme-aware('background-color', 'color-primary');
       border: none;
       border-radius: 6px;
@@ -64,10 +69,14 @@
     .row-cell {
       display: flex;
       text-align: left;
-      align-items: flex-end;
+      align-items: center;
       padding: 10px;
       height: 58px;
       line-height: 40px;
+
+      i {
+        display: block;
+      }
 
       &:first-child {
         .text-content {
