--- a/styles/offersPage/_offersTop.scss
+++ b/styles/offersPage/_offersTop.scss
@@ -1,17 +1,10 @@
-.offers-top {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+.offers-filters-wrapper{
   margin-top: 50px;
-  margin-bottom: 50px;
-
-  h1 {
-    font-size: $tp-1xl;
-    margin-bottom: 0;
-  }
-
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
   .btn--filters {
-    margin-top: 40px;
+    z-index: 2;
     display: flex;
     align-items: center;
     @include theme-aware('color', 'color-label');
@@ -26,15 +19,29 @@
 
     &.active {
       @include theme-aware('background-color', 'color-accent');
-      margin-top: 100px;
-      margin-bottom: -100px;
+      //margin-top: 100px;
+      //margin-bottom: -100px;
       box-shadow: 0px 3px 0px rgba(33, 13, 72, 0.25);
-      z-index: 1;
     }
 
     &:hover{
       @include theme-aware('background-color', 'filter-btn-hover');
     }
+  }
+}
+
+
+
+.offers-top {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  margin-bottom: 50px;
+
+  h1 {
+    font-size: $tp-1xl;
+    margin-bottom: 0;
   }
 
   @media (max-width: $bp-tablet) {
