Redesigned colors and icons following figma

--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -55,23 +55,19 @@
 }
 
 .icon--grid {
-  &--light {
-    background-image: url('/icons/display-grid-light.svg');
-  }
+    @include theme-aware("background-image", "icon-grid");
 
-  &--dark {
-    background-image: url('/icons/display-grid-dark.svg');
-  }
+    &.active{
+      background-image: url('/icons/display-grid-white.svg');
+    }
 }
 
 .icon--table {
-  &--light {
-    background-image: url('/icons/display-table-light.svg');
-  }
+    @include theme-aware("background-image", "icon--table");
 
-  &--dark {
-    background-image: url('/icons/display-table-dark.svg');
-  }
+    &.active{
+      background-image: url('/icons/display-table-white.svg');
+    }
 }
 
 .icon--caret {
@@ -86,11 +82,11 @@
 
 .icon--filter {
   &--down {
-    background-image: url('/icons/filter-arrow-down.svg');
+    @include theme-aware("background-image", "filter-arrow-down");
   }
 
   &--striped {
-    background-image: url('/icons/filter-arrow-striped.svg');
+    @include theme-aware("background-image", "filter-stripe");
   }
 }
 
@@ -105,10 +101,10 @@
 
 .icon--currency {
   &--SOL{
-    background-image: url('/icons/SOL-icon.svg');
+    @include theme-aware("background-image", "icon-SOL");
   }
   &--USDC{
-    background-image: url('/icons/USDC-icon.svg');
+    @include theme-aware("background-image", "icon-USDC");
   }
 }
 
