--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -9,7 +9,7 @@ $themes: (
     color-accentDim: #eae7fb,
     color-accentDark: #ffffff,
     color-content: #210d48,
-    color-label: #ffffff,
+    color-label: #210D48,
     color-loan: #2c1b4b,
     color-border: #d0e5f2,
     color-input-text: #210d48,
@@ -17,8 +17,8 @@ $themes: (
     bg-home: url('/home_bg.png'),
     bg-home-bottom: url('/home_bg_bottom.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
-    bg-table: rgba(33, 13, 72, 0.75),
-    bg-table-hover: rgba(72, 38, 136, 0.75),
+    bg-table: rgba(243, 237, 255, 0.8),
+    bg-table-hover: #E5D9FF,
     single-offer-heading: #e00a7f,
     single-offer-meta-bg: #b4ace2,
     single-offer-meta-label: #ffffff,
@@ -35,7 +35,20 @@ $themes: (
     input-number-button-bg: #E2D9F6,
     checkbox-checked-bg: #DF0B7F,
     switch-knob: #2e13d2,
-    filter-btn-hover: #705CEB
+    switch-color: #FFFFFF,
+    filter-btn-hover: #705CEB,
+    filter-arrow-down: url('/icons/filter-arrow-down-whiteTheme.svg'),
+    filter-stripe: url('/icons/filter-arrow-striped-whiteTheme.svg'),
+    lend-offer-button: #FFFFFF,
+    icon-grid: url('/icons/display-grid-light.svg'),
+    icon--table: url('/icons/display-table-light.svg'),
+    grid-table-button-bg:#2e13d2,
+    icon-SOL: url('/icons/SOL-icon-light.svg'),
+    icon-USDC: url('/icons/USDC-icon-light.svg'),
+
+    wallet-adapter-bg: #FFFFFF,
+    wallet-adapter-bg-hover: #D1C1F3,
+    wallet-adapter-color: #210D48,
   ),
   dark: (
     color-background: #210d48,
@@ -74,6 +87,19 @@ $themes: (
     input-number-button-bg: #331C62,
     checkbox-checked-bg: #DF0B7F,
     switch-knob: #e00a7f,
-    filter-btn-hover: #5D38A2
+    switch-color: #FFFFFF,
+    filter-btn-hover: #5D38A2,
+    filter-arrow-down: url('/icons/filter-arrow-down.svg'),
+    filter-stripe: url('/icons/filter-arrow-striped.svg'),
+    lend-offer-button: #FFFFFF,
+    icon-grid: url('/icons/display-grid-dark.svg'),
+    icon--table: url('/icons/display-table-dark.svg'),
+    grid-table-button-bg:#9E6CFF,
+    icon-SOL: url('/icons/SOL-icon-dark.svg'),
+    icon-USDC: url('/icons/USDC-icon-dark.svg'),
+
+    wallet-adapter-bg: #210D48,
+    wallet-adapter-bg-hover: #3E1F78,
+    wallet-adapter-color: #FFFFFF,
   )
 );
