--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -31,6 +31,8 @@ $wg-sh: 900;
 
 // Styling
 $brd-rds-lg: 24px;
+$brd-rds-2md: 20px;
+$brd-rds-1md: 18px;
 $brd-rds-md: 16px;
 $brd-rds-sm: 8px;
 $brd-rds-tn: 2px;
