--- a/styles/_walletAdapter.scss
+++ b/styles/_walletAdapter.scss
@@ -11,6 +11,7 @@
   font-size: 16px;
   font-weight: 600;
   height: 48px;
+  width: 200px;
   line-height: 48px;
   padding: 0 24px;
   border-radius: 4px;
@@ -25,7 +26,7 @@
 }
 
 .wallet-adapter-button:not([disabled]):hover {
-  background-color: #1a1f2e;
+  @include theme-aware("background-color", "wallet-adapter-bg-hover");
 }
 
 .wallet-adapter-button[disabled] {
@@ -59,7 +60,8 @@
 
 .wallet-adapter-dropdown {
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
 }
 
 .wallet-adapter-dropdown-list {
@@ -67,14 +69,12 @@
   z-index: 99;
   display: grid;
   grid-template-rows: 1fr;
-  grid-row-gap: 10px;
-  padding: 10px;
+  grid-row-gap: 2px;
+  padding: 6px;
   top: 100%;
-  right: 0;
-  margin: 0;
   list-style: none;
-  background: #2c2d30;
-  border-radius: 10px;
+  @include theme-aware("background-color", "wallet-adapter-bg");
+  border-radius: $brd-rds-1md;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6);
   opacity: 0;
   visibility: hidden;
@@ -85,7 +85,6 @@
 .wallet-adapter-dropdown-list-active {
   opacity: 1;
   visibility: visible;
-  transform: translateY(10px);
 }
 
 .wallet-adapter-dropdown-list-item {
@@ -98,17 +97,17 @@
   cursor: pointer;
   white-space: nowrap;
   box-sizing: border-box;
-  padding: 0 20px;
+  padding: 0 22px;
   width: 100%;
-  border-radius: 6px;
+  border-radius: $brd-rds-2md;
   font-size: 14px;
   font-weight: 600;
-  height: 37px;
-  color: #fff;
+  height: 24px;
+  @include theme-aware("color", "wallet-adapter-color");
 }
 
 .wallet-adapter-dropdown-list-item:not([disabled]):hover {
-  background-color: #1a1f2e;
+  @include theme-aware("background-color", "wallet-adapter-bg-hover");
 }
 
 .wallet-adapter-modal-collapse-button svg {
