finished color changes based on figma

--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -49,6 +49,8 @@ $themes: (
     wallet-adapter-bg: #FFFFFF,
     wallet-adapter-bg-hover: #D1C1F3,
     wallet-adapter-color: #210D48,
+
+    nft-offers-color: #2e13d2,
   ),
   dark: (
     color-background: #210d48,
@@ -101,5 +103,7 @@ $themes: (
     wallet-adapter-bg: #210D48,
     wallet-adapter-bg-hover: #3E1F78,
     wallet-adapter-color: #FFFFFF,
+
+    nft-offers-color: #FFFFFF,
   )
 );
