--- a/styles/singleOffer/_offer.scss
+++ b/styles/singleOffer/_offer.scss
@@ -1,9 +1,6 @@
 .offer-root {
   border-radius: 8px;
   padding: 2px;
-  background: linear-gradient(180deg, rgba(44, 19, 208, 1) 0%, rgba(44, 19, 208, 0) 100%);
-  -moz-box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.15);
-  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.15);
 
   &:hover {
     -moz-box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.15);
@@ -25,7 +22,7 @@
   align-items: center;
   justify-content: center;
   @include theme-aware('background', 'single-offer-offer-bg');
-  @include theme-aware('color', 'color-content');
+  @include theme-aware('color', 'nft-offers-color');
   padding: 16px;
   border-radius: 6px 6px 0 0;
   cursor: pointer;
@@ -63,10 +60,6 @@
   grid-template-columns: 1fr 1fr;
   width: 100%;
 
-  .info-item:nth-child(1) {
-    border-right: 1px solid;
-    @include theme-aware('border-color', 'color-border');
-  }
   .info-item:nth-child(2) {
     padding-left: 16px;
   }
@@ -93,7 +86,7 @@
   @include theme-aware('background-color', 'color-primary');
   font-family: 'Red Hat Display', sans-serif;
   font-weight: $wg-hv;
-  @include theme-aware('color', 'color-label');
+  @include theme-aware('color', 'lend-offer-button');
   border: none;
   border-radius: 6px;
   cursor: pointer;
