--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -35,6 +35,7 @@ $brd-rds-2md: 20px;
 $brd-rds-1md: 18px;
 $brd-rds-md: 16px;
 $brd-rds-sm: 8px;
+$brd-rds-1tn: 4px;
 $brd-rds-tn: 2px;
 
 // Spacing
