--- a/styles/_icons.scss
+++ b/styles/_icons.scss
@@ -55,19 +55,19 @@
 }
 
 .icon--grid {
-    @include theme-aware("background-image", "icon-grid");
+  @include theme-aware('background-image', 'icon-grid');
 
-    &.active{
-      background-image: url('/icons/display-grid-white.svg');
-    }
+  &.active {
+    background-image: url('/icons/display-grid-white.svg');
+  }
 }
 
 .icon--table {
-    @include theme-aware("background-image", "icon--table");
+  @include theme-aware('background-image', 'icon--table');
 
-    &.active{
-      background-image: url('/icons/display-table-white.svg');
-    }
+  &.active {
+    background-image: url('/icons/display-table-white.svg');
+  }
 }
 
 .icon--caret {
@@ -82,11 +82,11 @@
 
 .icon--filter {
   &--down {
-    @include theme-aware("background-image", "filter-arrow-down");
+    @include theme-aware('background-image', 'filter-arrow-down');
   }
 
   &--striped {
-    @include theme-aware("background-image", "filter-stripe");
+    @include theme-aware('background-image', 'filter-stripe');
   }
 }
 
@@ -100,14 +100,13 @@
 }
 
 .icon--currency {
-  &--SOL{
-    @include theme-aware("background-image", "icon-SOL");
+  &--SOL {
+    @include theme-aware('background-image', 'icon-SOL');
   }
-  &--USDC{
-    @include theme-aware("background-image", "icon-USDC");
+  &--USDC {
+    @include theme-aware('background-image', 'icon-USDC');
   }
 }
-
 
 .icon--fb {
   background-image: url('/icons/facebook-light.svg');
@@ -152,6 +151,15 @@
   background-image: url('/icons/twitter-icon.svg');
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+.icon--paginator {
+  &--left {
+    @include theme-aware('background-image', 'icon-paginator-left');
+  }
+  &--right {
+    @include theme-aware('background-image', 'icon-paginator-right');
+  }
 }
 
 .icon--tn {
