--- a/styles/_themes.scss
+++ b/styles/_themes.scss
@@ -9,7 +9,7 @@ $themes: (
     color-accentDim: #eae7fb,
     color-accentDark: #ffffff,
     color-content: #210d48,
-    color-label: #210D48,
+    color-label: #210d48,
     color-loan: #2c1b4b,
     color-border: #d0e5f2,
     color-input-text: #210d48,
@@ -18,7 +18,7 @@ $themes: (
     bg-home-bottom: url('/home_bg_bottom.png'),
     bg-overlay-bright: rgba(46, 19, 210, 0.8),
     bg-table: rgba(243, 237, 255, 0.8),
-    bg-table-hover: #E5D9FF,
+    bg-table-hover: #e5d9ff,
     single-offer-heading: #e00a7f,
     single-offer-meta-bg: #b4ace2,
     single-offer-meta-label: #ffffff,
@@ -30,27 +30,30 @@ $themes: (
     info-green: #7fbe20,
     icon-eye: url('/icons/eye-icon-white.svg'),
     nft-pill-bg: #371c6b,
-    input-number-bg: #FFFFFF,
-    input-number-color: #210D48,
-    input-number-button-bg: #E2D9F6,
-    checkbox-checked-bg: #DF0B7F,
+    input-number-bg: #ffffff,
+    input-number-color: #210d48,
+    input-number-button-bg: #e2d9f6,
+    checkbox-checked-bg: #df0b7f,
     switch-knob: #2e13d2,
-    switch-color: #FFFFFF,
-    filter-btn-hover: #705CEB,
+    switch-color: #ffffff,
+    filter-btn-hover: #705ceb,
     filter-arrow-down: url('/icons/filter-arrow-down-whiteTheme.svg'),
     filter-stripe: url('/icons/filter-arrow-striped-whiteTheme.svg'),
-    lend-offer-button: #FFFFFF,
+    lend-offer-button: #ffffff,
     icon-grid: url('/icons/display-grid-light.svg'),
     icon--table: url('/icons/display-table-light.svg'),
-    grid-table-button-bg:#2e13d2,
+    grid-table-button-bg: #2e13d2,
     icon-SOL: url('/icons/SOL-icon-light.svg'),
     icon-USDC: url('/icons/USDC-icon-light.svg'),
-
-    wallet-adapter-bg: #FFFFFF,
-    wallet-adapter-bg-hover: #D1C1F3,
-    wallet-adapter-color: #210D48,
+    wallet-adapter-bg: #ffffff,
+    wallet-adapter-bg-hover: #d1c1f3,
+    wallet-adapter-color: #210d48,
 
     nft-offers-color: #2e13d2,
+
+    icon-paginator-left: url('/icons/page-left-icon-light.svg'),
+    icon-paginator-right: url('/icons/page-right-icon-light.svg'),
+    pagination-color: white,
   ),
   dark: (
     color-background: #210d48,
@@ -84,26 +87,29 @@ $themes: (
     info-green: #7fbe20,
     icon-eye: url('/icons/eye-icon-white.svg'),
     nft-pill-bg: #371c6b,
-    input-number-bg: #210D48,
-    input-number-color: #FFFFFF,
-    input-number-button-bg: #331C62,
-    checkbox-checked-bg: #DF0B7F,
+    input-number-bg: #210d48,
+    input-number-color: #ffffff,
+    input-number-button-bg: #331c62,
+    checkbox-checked-bg: #df0b7f,
     switch-knob: #e00a7f,
-    switch-color: #FFFFFF,
-    filter-btn-hover: #5D38A2,
+    switch-color: #ffffff,
+    filter-btn-hover: #5d38a2,
     filter-arrow-down: url('/icons/filter-arrow-down.svg'),
     filter-stripe: url('/icons/filter-arrow-striped.svg'),
-    lend-offer-button: #FFFFFF,
+    lend-offer-button: #ffffff,
     icon-grid: url('/icons/display-grid-dark.svg'),
     icon--table: url('/icons/display-table-dark.svg'),
-    grid-table-button-bg:#9E6CFF,
+    grid-table-button-bg: #9e6cff,
     icon-SOL: url('/icons/SOL-icon-dark.svg'),
     icon-USDC: url('/icons/USDC-icon-dark.svg'),
+    wallet-adapter-bg: #210d48,
+    wallet-adapter-bg-hover: #3e1f78,
+    wallet-adapter-color: #ffffff,
 
-    wallet-adapter-bg: #210D48,
-    wallet-adapter-bg-hover: #3E1F78,
-    wallet-adapter-color: #FFFFFF,
+    nft-offers-color: #ffffff,
 
-    nft-offers-color: #FFFFFF,
-  )
+    icon-paginator-left: url('/icons/page-left-icon-dark.svg'),
+    icon-paginator-right: url('/icons/page-right-icon-dark.svg'),
+    pagination-color: white,
+  ),
 );
