--- a/styles/offersPage/_offersPagination.scss
+++ b/styles/offersPage/_offersPagination.scss
@@ -49,17 +49,11 @@
 
   @media (max-width: $bp-tablet) {
     width: 100vw;
-    flex-direction: column;
-    text-align: center;
-
-    button {
-      padding: 15px 30px;
-    }
 
     &__pages {
       width: 100vw;
       display: flex;
-      margin: 40px 0;
+      justify-content: center;
     }
   }
 }
