--- a/styles/_createLoan.scss
+++ b/styles/_createLoan.scss
@@ -1,6 +1,6 @@
 .create-offer-container {
   h1 {
-    @include theme-aware('color', 'color-primary');
+    @include theme-aware('color', 'lightbox-label-color');
     padding: 0 0 16px 0;
   }
 }
@@ -15,7 +15,7 @@
 
   span {
     font-size: 14px;
-    @include theme-aware('color', 'color-primary');
+    @include theme-aware('color', 'lightbox-label-color');
   }
 
   .form-line {
@@ -48,10 +48,9 @@
   .input-text,
   select {
     margin-top: 6px;
-    border: 2px solid;
-    @include theme-aware('border-color', 'color-primary');
-    @include theme-aware('background-color', 'color-accent');
-    @include theme-aware('color', 'color-label');
+    border: 0px;
+    @include theme-aware('background-color', 'lightbox-collection-select-bg');
+    @include theme-aware('color', 'lightbox-collection-select-color');
     padding: 9px;
     border-radius: 6px;
     height: 42px;
@@ -66,8 +65,12 @@
   }
 
   select {
-    @include theme-aware('background-color', 'color-accent');
-    @include theme-aware('color', 'color-label');
+    @include theme-aware('background-color', 'lightbox-collection-select-bg');
+    @include theme-aware('color', 'lightbox-collection-select-color');
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+
     margin-top: 5px;
 
     &:focus {
@@ -84,6 +87,7 @@
     }
 
     & > div:nth-child(2) {
+      margin-top: 20px;
       width: 203px;
 
       @media (max-width: $bp-tablet) {
@@ -94,10 +98,6 @@
       font-size: 24px;
       width: 100%;
     }
-  }
-
-  input[type='range'] {
-    margin-top: 10px;
   }
 
   button {
@@ -120,7 +120,7 @@
       width: 100%;
       text-align: center;
       justify-content: center;
-      @include theme-aware('color', 'color-label');
+      @include theme-aware('color', 'lend-offer-button');
     }
   }
 
@@ -129,10 +129,11 @@
     margin-right: 15px;
     width: 100%;
     height: 7px;
-    @include theme-aware('background-color', 'color-accentDark');
+    @include theme-aware('background-color', 'lightbox-range-bg');
     border-radius: 5px;
     background-size: 70% 100%;
     background-repeat: no-repeat;
+    margin-top: 10px;
   }
 
   /* Input Thumb */
